# Constellate

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
Constellate/: ConstellateApp.swift  ContentView.swift  Item.swift
Constellate.xcodeproj/: project.pbxproj
aligner/: __init__.py  agent.py
aligner/config/: models.py  prompts.py
backend/: .dockerignore  .env.example  README_DEV.md  pyproject.toml
backend/prompts/: intervention_composer_system.j2
backend/tests/: test_a2ui.py  test_agent.py  test_experiential.py  test_fan_out.py  test_model_registry.py  test_prompt_registry.py  (+1 more)
compounding/: journal.md
config/: models.toml
doc/: product_architecture.md  product_design.md  product_memo.md
docs/: 01_Product_Foundation.md  02_Design_System.md  03_Architecture.md  04_UI_Specification.md  05_Image_Generation.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
prompts/: coach_system.j2  intervention_composer_system.j2
scripts/: test_llm_connectivity.py
tests/: test_a2ui.py  test_agent.py  test_experiential.py  test_fan_out.py  test_graph.py  test_model_registry.py  test_prompt_registry.py  test_schemas.py
todos/: 001-pending-p1-backend-no-authentication.md  002-pending-p1-swiftdata-image-no-pagination.md  003-pending-p1-unbounded-intervention-cache.md  004-pending-p1-test-cache-key-mismatch.md  005-pending-p2-jinja2-sandbox.md  006-pending-p2-a2ui-field-type-mismatch.md  007-pending-p2-message-role-magic-string.md  008-pending-p2-journal-no-data-path.md  009-pending-p2-dead-code-removal.md  010-pending-p2-viewmodel-mainactor-try.md  011-pending-p2-sse-no-reconnection.md  012-pending-p2-gemini-no-error-handling.md  013-pending-p3-typography-modifier-bypass.md  014-pending-p3-image-decode-per-render.md  015-pending-p3-deployment-security-hardening.md  016-pending-p3-minor-code-quality.md
(+108 files in other folders)
