[project]
name = "aligner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.12",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aligner_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
