[project]
name = "constellate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.12",
    "jinja2>=3.1.6",
    "langchain-openai>=1.1.7",
    "langchain-google-genai>=2.2.0",
    "langchain-community>=0.3.0",
    "dashscope>=1.21.0",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
    "langgraph-cli>=0.4.12",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.12",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/constellate"]

[tool.pytest.ini_options]
pythonpath = ["src"]
