[project]
name = "constellate"
version = "0.1.0"
description = "基于教练协议的长期行为对齐系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.12",
    "jinja2>=3.1.6",
    "langchain-google-genai>=4.0.0,<5.0.0",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
    "langgraph-cli>=0.4.12",
    "google-genai>=1.62.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.12",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/constellate"]

[tool.pytest.ini_options]
pythonpath = ["src"]
